--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -136,6 +136,10 @@ services:
       - elk
     depends_on:
       - elasticsearch
+    logging:
+      options:
+        max-size: "10m"
+        max-file: "3"
 
 networks:
   elk:
