--- a/extensions/filebeat/config/filebeat.yml
+++ b/extensions/filebeat/config/filebeat.yml
@@ -46,15 +46,28 @@ processors:
 monitoring:
   enabled: true
   elasticsearch:
+    hosts: [http://elasticsearch:9200]
     username: beats_system
     password: ${BEATS_SYSTEM_PASSWORD}
 
-output.elasticsearch:
-  hosts: [ http://elasticsearch:9200 ]
-  username: filebeat_internal
-  password: ${FILEBEAT_INTERNAL_PASSWORD}
-  indices:
-    - index: "fastapi-filebeat-%{[agent.version]}"
+# output.elasticsearch:
+#   hosts: [ http://elasticsearch:9200 ]
+#   username: filebeat_internal
+#   password: ${FILEBEAT_INTERNAL_PASSWORD}
+#   indices:
+#     - index: "fastapi-filebeat-%{[agent.version]}"
+#       when.equals.fields.out_index: fastapi
+
+output.kafka:
+  hosts: ["172.20.125.78:9092"]
+  topic: "logs-filebeat-%{[agent.version]}"
+  partition.round_robin:
+    reachable_only: false
+  required_acks: 1
+  compression: gzip
+  max_message_bytes: 1000000
+  topics:
+    - topic: "logs-fastapi-filebeat-%{[agent.version]}"
       when.equals.fields.out_index: fastapi
 
 ## HTTP endpoint for health checking
