filebeat read oht logs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -129,6 +129,12 @@ services:
         source: /var/run/docker.sock
         target: /var/run/docker.sock
         read_only: true
+      - type: bind
+        source: ./filebeat-log-source
+        target: /var/log/filebeat-log-source
+        read_only: true
+        bind:
+          create_host_path: true
     environment:
       FILEBEAT_INTERNAL_PASSWORD: ${FILEBEAT_INTERNAL_PASSWORD:-}
       BEATS_SYSTEM_PASSWORD: ${BEATS_SYSTEM_PASSWORD:-}
