--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -6,14 +6,30 @@ input {
 	tcp {
 		port => 50000
 	}
+
+	kafka {
+		bootstrap_servers => "172.20.125.78:9092"
+		topics => ["logs-oht-alarm-filebeat-8.15.2"]
+		codec => "json"
+	}
 }
 
 ## Add your filters / logstash plugins configuration here
+filter {
+	grok {
+		match => { "message" => "%{TIME:[split_message][time]}	%{GREEDYDATA:[split_message][level]}	%{GREEDYDATA:[split_message][message]}	%{GREEDYDATA:[split_message][code_line]}"}
+	}
+}
 
 output {
 	elasticsearch {
 		hosts => "elasticsearch:9200"
 		user => "logstash_internal"
 		password => "${LOGSTASH_INTERNAL_PASSWORD}"
+		data_stream => true
+	}
+
+	stdout {
+		codec => rubydebug
 	}
 }
