Refactor logstash.conf to improve log parsing and timestamp handling

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -17,7 +17,28 @@ input {
 ## Add your filters / logstash plugins configuration here
 filter {
 	grok {
-		match => { "message" => "%{TIME:[split_message][time]}	%{GREEDYDATA:[split_message][level]}	%{GREEDYDATA:[split_message][message]}	%{GREEDYDATA:[split_message][code_line]}"}
+		match => { 
+			"message" => [
+				"%{TIME:[split_message][time]}\t%{GREEDYDATA:[split_message][level]}\t%{GREEDYDATA:[split_message][message]}\t%{GREEDYDATA:[split_message][code_line]}",
+				"%{TIME:[split_message][time]}\t%{GREEDYDATA:[split_message][level]}\t%{GREEDYDATA:[split_message][message]}"
+			]
+		}
+	}
+
+	grok {
+		match => {
+			"[log][file][path]" => "/var/log/filebeat-log-source/%{GREEDYDATA:[oht][ip]}/%{GREEDYDATA:[oht][log_date]}/%{GREEDYDATA:[oht][log_type]}/%{GREEDYDATA:[oht][log_file]}"
+		}
+		add_field => {
+			"[oht][log_timestamp]" => "%{[oht][log_date]} %{[split_message][time]}"
+		}
+	}
+
+	date {
+		match => ["[oht][log_timestamp]", "yyyyMMdd HH:mm:ss.SSS"]
+		timezone => "Asia/Taipei"
+		target => "@timestamp"
+		remove_field => "[oht][log_timestamp]"
 	}
 }
 
