--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -9,7 +9,7 @@ input {
 
 	kafka {
 		bootstrap_servers => "172.20.125.78:9092"
-		topics => ["logs-oht-alarm-filebeat-8.15.2"]
+		topics => ["logs-oht-alarm-filebeat-8.15.2", "logs-oht-command-filebeat-8.15.2"]
 		codec => "json"
 	}
 }
